--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
   
   body {
     font-size: 1.6rem;
-    font-family: "Roboto", Verdana, sans-serif;
+    font-family: "Kanit", Verdana, sans-serif;
   }
   
   .wrapper__global {
@@ -13,20 +13,20 @@ html {
   }
 
   h1 {
-    font-family: "Roboto", Verdana, sans-serif;
+    font-family: "Kanit", Verdana, sans-serif;
     font-size: 120px;
     font-style: bold;
     font-weight: 400;
     line-height: 100px;
     padding-bottom: 20px;
     text-align: center;
-    color: green;
+    color: blueviolet;
     padding-top: 90px;
     padding-bottom: 400px;
     }
 
   h2 {
-    font-family: "Roboto", Verdana, sans-serif;
+    font-family: "Playpen Sans", Verdana, sans-serif;
     font-size: 25px;
     font-style: bold;
     font-weight: 400;
@@ -37,8 +37,10 @@ html {
   img {
     width: 270px;
     height: 378px;
+    border-radius: 5px;
+    border: 3px solid blueviolet;
   }
 
-  .retreat {
-    padding-bottom: 420px;
+  .left {
+    padding-left: 40px;
   }
